# RAGLens

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml
collector/go/: Dockerfile  go.mod
dashboard/web/: Dockerfile  index.html  package-lock.json  package.json
docs/: REBRANDING.md
docs/ai-context/: AI_HANDOFF.md  CURRENT_TASK.md  DECISIONS.md  DEVLOG.md  REAL_LOCAL_RAG_MILESTONE.md  (+1 more)
scripts/: check-raglens.py  demo-trace-all.ps1  smoke.ps1  start-all.py  start-collector.ps1  start-dashboard.ps1  start-raglens.py  start-sledtrace.py
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: chunk_normalization_demo.py  custom_pipeline_demo.py  diagnostic_quality_demo.py  no_chunks_demo.py  real_llm_rag_demo.py  refund_policy_demo.py  warning_rules_demo.py
sdk/python/examples/local_rag_demo/: README.md  run_demo.py
sdk/python/examples/local_rag_demo/docs/: account_policy.md  legacy_refund_policy.md  refund_policy.md  shipping_policy.md  warranty_policy.md
sdk/python/examples/local_rag_demo/local_rag/: answerer.py  chunker.py  document_loader.py  tfidf_retriever.py
sdk/python/examples/reference_rag_app/: __init__.py  run.py
sdk/python/examples/reference_rag_app/docs/: damaged_items_policy.md  digital_goods_policy.md  refund_policy_current.md  refund_policy_legacy.md  returns_process.md  shipping_policy.md  subscription_policy.md  warranty_policy.md
sdk/python/raglens/: __init__.py  chunks.py  models.py  trace.py
sdk/python/sledtrace/: __init__.py
sdk/python/tests/: test_rebrand_compatibility.py
(+44 files in other folders)
