[project]
name = "raglens"
version = "0.2.0"
description = "Local-first visual debugger for RAG pipelines."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "RAGLens Contributors" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["raglens*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
