[project]
name = "sledtrace"
version = "0.4.1"
description = "Local-first observability and debugging for RAG pipelines."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "SledTrace Contributors" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["raglens*", "sledtrace*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
